--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vuetify": "^2.6.10"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.3"
+    "@nuxtjs/vuetify": "^1.12.3",
+    "prettier": "2.7.1"
   }
 }
