--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "sass": "^1.55.0",
+    "sass-loader": "10"
   }
 }
