--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
-    "prettier": "2.7.1",
-    "sass": "^1.55.0",
-    "sass-loader": "10"
+    "prettier": "2.7.1"
   }
 }
